--- a/public/sass/partials/_single.scss
+++ b/public/sass/partials/_single.scss
@@ -80,4 +80,28 @@
     margin: 2rem 0 4rem;
     min-height: 150px;
   }
+  &__contact {
+    margin-top: -3rem;
+    margin-right: 5px;
+    border-radius: 3px;
+    background: #303030;
+    color: white;
+    display: inline-block;
+    float: right;
+    position: relative;
+    padding: 1rem;
+    max-height: 52px;
+    &.phone {
+      background: #4caf50;
+    }
+    &.email {
+      background: #4caf50;
+    }
+    svg {
+      width: 30px;
+      transition: all 0.2s;
+      fill: white;
+      margin-bottom: 1rem;
+    }
+  }
 }
