--- a/views/mixins/_storeForm.pug
+++ b/views/mixins/_storeForm.pug
@@ -4,6 +4,10 @@ mixin storeForm(store = {})
     input(type="text" name="name" value=store.name) 
     label(for="description") Description
     textarea(name="description")= store.description
+    label(for="phone") Phone
+    input(type="text" name="phone" value=store.phone) 
+    label(for="phone") Email
+    input(type="email" name="email" value=store.email) 
     //- image
     label(for="photo") Photo
       input(type="file" name="photo" id="photo" accept="image/gif, image/png, image/jpeg, image/jpg")
@@ -11,9 +15,9 @@ mixin storeForm(store = {})
         img(src=`/uploads/${store.photo}`, alt=store.name width=200)
     label(for="address") Address
     input(type="text" id="address" name="location[address]" value=( store.location && store.location.address))
-    label(for="lng") Addres Lng
+    label(for="lng") Address Lng
     input(type="text" id="lng" name="location[coordinates][0]" value=(store.location && store.location.coordinates[0]) required)
-    label(for="lng") Addres Lat
+    label(for="lng") Address Lat
     input(type="text" id="lat" name="location[coordinates][1]" value=(store.location && store.location.coordinates[1]) required)
     - const choices = h.choices;
     - const tags = store.tags || []
