--- a/views/store.pug
+++ b/views/store.pug
@@ -13,6 +13,12 @@ block content
   .single__details.inner
     img.single__map(src=h.staticMap(store.location.coordinates))
     p.single__location= store.location.address
+    if store.email
+      a(href=`mailto:${store.email || ''}`).single__contact.email
+        != h.icon('email')
+    if store.phone
+      a(href=`tel:${store.phone || ''}`).single__contact.phone
+        != h.icon('phone')
     p.single__desc= store.description
     if store.tags
       ul.tags
