--- a/public/sass/partials/_typography.scss
+++ b/public/sass/partials/_typography.scss
@@ -96,4 +96,13 @@ p {
   margin-top: -9rem;
   font-size: 10rem;
   text-align: center;
+  @media (max-width: 700px) {
+    font-size: 7rem;
+  }
+  @media (max-width: 500px) {
+    font-size: 5rem;
+  }
+  @media (max-width: 350px) {
+    font-size: 4rem;
+  }
 }
