--- a/public/sass/partials/_single.scss
+++ b/public/sass/partials/_single.scss
@@ -48,6 +48,7 @@
     box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.15);
   }
   &__map {
+    cursor: pointer;
     border-radius: 3px;
     width: calc(100% + 6rem);
     max-width: none;
