--- a/public/sass/partials/_table.scss
+++ b/public/sass/partials/_table.scss
@@ -2,6 +2,14 @@
   width: 100%;
   td {
     padding: 5px;
+    border-radius: 3px;
+    text-align: center;
+    font-size: 20px;
+    font-family: "Panama", sans-serif;
+    img {
+      height: 100px;
+      object-fit: cover;
+    }
   }
   tr:nth-child(even) {
     background: white;
