--- a/views/topStores.pug
+++ b/views/topStores.pug
@@ -5,17 +5,23 @@ block content
     h2 Top #{stores.length} Stores
     table.table
       thead
-        td ranking
-        td photo
+        td #
         td name
+        td photo
         td reviews
         td Average Rating
       each store, i in stores
         tr
           td #{i + 1}
+          td: a(href=`/store/${store.slug}`)= store.name
           td
             a(href=`/store/${store.slug}`)
               img(width=200 src=`/uploads/${store.photo || 'store.png'}` alt=store.name)
-          td: a(href=`/store/${store.slug}`)= store.name
           td= store.reviews.length
-          td #{Math.round(store.averageRating * 10) /10} / 5
+          //- td #{Math.round(store.averageRating * 10) /10} / 5
+          td 
+            - const avgRating = Math.round(store.averageRating * 10) /10;
+            .review__stars.in__top(title=`Rated ${avgRating} out of 5 stars`)
+              = `★`.repeat(avgRating)
+              = `☆`.repeat(5 - avgRating)
+              span= `(${avgRating.toFixed(1)})`
